<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimary">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/normal_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/scrollView"
            android:layout_marginTop="0dp"
            android:background="@android:color/background_light"
            tools:context=".activity.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:orientation="vertical"
                android:id="@+id/status_view"
                android:background="@color/colorPrimary">
                
                <TextView
                    android:gravity="center"
                    android:textSize="30dip"

                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="小浜"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:layout_below="@+id/status_view"

                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/back"
                android:padding="10dp"
                android:text="Sample TextView..."
                android:textSize="20dp"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/calendarView"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/chart"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip"
                    android:id="@+id/FishStarView">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/moon_old"
                        android:textSize="20dip"
                        android:id="@+id/moon_old" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/moonrise"
                        android:textSize="20dip"
                        android:id="@+id/moonrise" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/moonset"
                        android:textSize="20dip"
                        android:id="@+id/moonset" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sunrize"
                        android:textSize="20dip"
                        android:id="@+id/sunrize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sunset"
                        android:textSize="20dip"
                        android:id="@+id/sunset" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:src="@drawable/w01d"
                        android:id="@+id/weatherIcon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/max"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20dip"
                        android:id="@+id/maxView" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/min"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="20dip"
                        android:id="@+id/minView" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
